La till en lista

--- a/Hemsida/index.html
+++ b/Hemsida/index.html
@@ -10,11 +10,21 @@
     <div class="container">
       <div class="row">
         <div class="span4">
-          <div class="hero-unit">
+          <div class="well sidebar-nav">
+            <ul class="nav nav-list">
+              <li class="nav-header">Meny</li>
+              <li class="active"><a href="#">Hem</a></li>
+                <li><a href="#">Mattvätt</a></li>
+                <li><a href="#">Möbeltvätt</a></li>
+                <li><a href="#">Priser</a></li>
+                <li><a href="#">Miljö</a></li>
+                <li><a href="#">Kontakt</a></li>
+            </ul>
           </div>
         </div>
         <div class="span8">
           <div class="hero-unit">
+            <h1>Välkommen</h1>
           </div>
         </div>
       </div>
