--- a/Hemsida/index.html
+++ b/Hemsida/index.html
@@ -8,12 +8,15 @@
   </head>
   <body>
     <div class="container">
-      <div class="row">
+      <div class="header">
+        <h1>Palmqvists Matt-och Möbelfix</h1>
+      </div>
+      <div class="row-fluid">
         <div class="span4">
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
               <li class="nav-header">Meny</li>
-              <li class="active"><a href="#">Hem</a></li>
+              <li class="active"><a href="index.html">Hem</a></li>
                 <li><a href="#">Mattvätt</a></li>
                 <li><a href="#">Möbeltvätt</a></li>
                 <li><a href="#">Priser</a></li>
@@ -21,10 +24,23 @@
                 <li><a href="#">Kontakt</a></li>
             </ul>
           </div>
+          <div class="well sidebar-nav">
+            <dl class="dl">
+              <dt>Telefon</dt>
+              <dd>08-0000000</dd>
+              <dt>Adress</dt>
+              <dd>Testgatan 21, 123 45 test</dd>
+              <dt>Sociala medier</dt>
+              <dd><a href="#">Facebook</a></dd>
+              <dd><a href="#">Twitter</a></dd>
+              <dd><a href="#">Google+</a></dd>
+            </dl>
+          </div>
         </div>
         <div class="span8">
           <div class="hero-unit">
             <h1>Välkommen</h1>
+            <p>Bacon ipsum dolor sit amet short loin spare ribs prosciutto shoulder strip steak chuck andouille pork loin pig jowl. Biltong drumstick ribeye kielbasa bresaola corned beef pig short ribs ground round ham shankle t-bone pancetta spare ribs. Shank sirloin flank beef ribs venison t-bone spare ribs tenderloin beef short loin doner. Short loin bresaola leberkas sausage prosciutto filet mignon flank pork chop ham hock pig. Cow flank short ribs corned beef bacon shank swine beef ribs pig venison bresaola spare ribs.</p>
           </div>
         </div>
       </div>
