La till logon vid menyn

--- a/Hemsida/index.html
+++ b/Hemsida/index.html
@@ -14,6 +14,7 @@
       <div class="row-fluid">
         <div class="span4">
           <div class="well sidebar-nav">
+            <img src="http://webbits.nu/assets/img/logos/siteHeaderLogo.png">
             <ul class="nav nav-list">
               <li class="nav-header">Meny</li>
               <li class="active"><a href="index.html">Hem</a></li>
