--- a/Hemsida/index.html
+++ b/Hemsida/index.html
@@ -29,11 +29,12 @@
             <p>Bacon ipsum dolor sit amet short loin spare ribs prosciutto shoulder strip steak chuck andouille pork loin pig jowl. Biltong drumstick ribeye kielbasa bresaola corned beef pig short ribs ground round ham shankle t-bone pancetta spare ribs. Shank sirloin flank beef ribs venison t-bone spare ribs tenderloin beef short loin doner. Short loin bresaola leberkas sausage prosciutto filet mignon flank pork chop ham hock pig. Cow flank short ribs corned beef bacon shank swine beef ribs pig venison bresaola spare ribs.</p>
           </div>
         </div>
-        <div class="span12">
-          <p><strong>Telefon</strong> 08-0000000</p>
-
-        </div>
       </div>
     </div>
+    <center>
+      <br>
+            <p style="color:#EEEEEE;"><strong>Telefon</strong> 08-0000000 · <strong>Adress</strong> Testgatan 21, 123 45 test</p>
+            <p style="color:#EEEEEE;"><strong>Följ oss på</strong> <a href="#">Facebook</a>, <a href="#">Twitter</a> <strong>eller</strong> <a href="#">Google+</a></p>
+          </center>
   </body>
 </html>
